--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <title>TEDxISTAlameda</title>
-		<!--
-        <meta name="description" content="TEDxISTAlameda (x = independently organized TEDx event)."/>
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+
+		<meta name="description" content="TEDxISTAlameda (x = independently organized TEDx event)."/>
+        <link rel="icon" type="image/x-icon" href="images/favicon.png"/>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
         <meta property="og:title" content="TEDxISTAlameda"/>
         <meta property="og:type" content="website"/>
         <meta property="og:site_name" content="TEDxISTAlameda"/>
         <meta property="og:url" content="https://tedxistalameda.com/"/>
-        <meta property="og:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/>
+        <!--<meta property="og:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/>-->
         <meta property="og:description" content="TEDxISTAlameda (x = independently organized TEDx event)."/>
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:description" content="TEDxISTAlameda (x = independently organized TEDx event)."/>
         <meta name="twitter:title" content="TEDxISTAlameda"/>
         <meta name="twitter:site" content="@TEDxISTAlameda"/>
-        <meta name="twitter:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/> -->
+        <!--<meta name="twitter:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/> -->
+		
         <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/e2348662-3176-4f6f-a421-487b044db6b9.css"/>
         <link href="css/test.css" rel="stylesheet" type='text/css'>
-
-        <link href="css/team.css" rel="stylesheet" type='text/css'>
-
-		<!--<link href="css/onepage-scroll.css" rel="stylesheet" type='text/css'>-->
-    </head>
+		<link href="css/team.css" rel="stylesheet" type='text/css'>
+	</head>
 	
     <body class="home">
         <main style="width: 100%;">
@@ -159,13 +157,7 @@
 				<!-- HAMBURGUER MENU -->
 				<input id="nav_burger" type="checkbox" style="visibility: hidden;"/>
 				<label for="nav_burger">
-
-					<span class="icon-bar"></span>
-	                <span class="icon-bar"></span>	<!--NUMERO DE ANDARES DO HABURGUER-->
-	                <span class="icon-bar"></span>
-
 					<span></span><span></span><span></span>
-
 				</label>
 
 				<!-- TEAM & ABOUT - CONTENT -->
@@ -182,100 +174,94 @@
 						<!-- Team -->
 						<div class="content content_selected" data-section="team">
 							<h2>Is someone missing here?</h2> 
-                            
-                <header>
-                    <div class="container">
-                        <div class="row">
-                            <div clas="head-team">
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="42" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="41" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="40" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="39" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="38" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="37" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="36" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="35" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="34" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="33" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="32" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="31" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="30" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="29" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="28" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="27" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="26" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="25" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="24" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="23" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="22" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="21" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="20" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="19" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="18" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="17" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="16" data-toggle="tooltip"></div>
-                                </div>
-                                <div class="image-holder" data-toggle="collapse" data-target=".head-info">
-                                    <div class="head-image" data-image-num="15" data-toggle="tooltip"></div>
-                                </div>    
-                            </div>
-                        </div>
-                    </div>
-                </header>
-
+							<div class="row">
+								<div class="head-team">
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="42" data-toggle="tooltp"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+                                    	<div class="head-image" data-image-num="41" data-toggle="tooltip"></div>
+                                	</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="40" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="39" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="38" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="37" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="36" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="35" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="34" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="33" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="32" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="31" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="30" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="29" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="28" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="27" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="26" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="25" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="24" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="23" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="22" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="21" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="20" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="19" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="18" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="17" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="16" data-toggle="tooltip"></div>
+									</div>
+									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
+										<div class="head-image" data-image-num="15" data-toggle="tooltip"></div>
+									</div>    
+								</div>
+							</div>
 						</div>
 
 						<!-- About -->
@@ -2801,9 +2787,7 @@ But his eyes are blue and mine are red and raw.”</p>
     	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
         <script src="js/test.js"></script>
-        <script src="js/team.js"></script>
-
-		<!--<script src="js/jquery.onepage-scroll.js"></script>-->
+		<script src="js/team.js"></script>
 		
         <script>
 			$("#team_about a").bind("click", function(e) {
