UI/UX improvement.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">News</span>
-                            <span class="list_cta">Find out how is like to organize the best TEDxISTAlameda ever!</span>
+                            <!--<span class="list_cta">Find out how is like to organize the best TEDxISTAlameda ever!</span>-->
 							<!-- top albums -->
 							<div class="list_album" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="http://10x16.com/images/albums/placeholder.png"/> 
@@ -462,7 +462,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Speakers</span>
-                            <span class="list_cta">We've quite the lineup of speakers. Are you ready?</span>
+                            <!--<span class="list_cta">We've quite the lineup of speakers. Are you ready?</span>-->
                             <!-- top albums -->
 							<div class="list_album" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="http://10x16.com/images/albums/placeholder.png" data-image="images/photos/take_one.jpg"/> 
@@ -620,7 +620,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Partners</span>
-                            <span class="list_cta">We're honored to have the most innovative community-minded companies backing us.</span>
+                            <!--<span class="list_cta">We're honored to have the most innovative community-minded companies backing us.</span>-->
                             <!-- top albums -->
 							<div class="list_album" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="http://10x16.com/images/albums/placeholder.png" data-image="images/photos/take_one.jpg"/> 
@@ -826,7 +826,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Contest</span>
-                            <span class="list_cta">We challenge you to take the stage in TEDxISTAlameda 2017.</span>
+                            <!--<span class="list_cta">We challenge you to take the stage in TEDxISTAlameda 2017.</span>-->
                             <!-- top albums -->
 							<div class="list_album" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="http://10x16.com/images/albums/placeholder.png" data-image="images/photos/take_one.jpg"/> 
@@ -1008,7 +1008,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Past editions</span>
-                            <span class="list_cta">Learn from the past, focus on the future!</span>
+                            <!--<span class="list_cta">Learn from the past, focus on the future!</span>-->
                             <!-- top albums -->
 							<div class="list_album" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="http://10x16.com/images/albums/placeholder.png" data-image="images/photos/take_one.jpg"/> 
