Content is width responsive.

--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                         </div>
 						
 						<!-- SECTION STARTS -->
-						<div class="album">
+						<div class="edition">
 							<div class="section_title">
 								<span class="year">2016</span>
 								<span class="theme">THEME: ALL ABOARD</span>
@@ -1106,8 +1106,8 @@
 								<h2 class="main-header">
 									<span>Designing the conditions to design everything</span>
 								</h2>
-								<p>
-									<a data-artist-name="withcompany" style="color:#ff2100; font-size: 24px;">WithCompany</a> 
+								<p class="speaker">
+									<a data-artist-name="withcompany">WithCompany</a> 
 								</p>
 								<p class="excerpt">
 									Rui Quinta and Tiago Nunes, WithCompany co-founders, explain what Design Thinking did for them and how they are using it to help constantly redefine the way they work.
@@ -1122,8 +1122,8 @@
 								<h2 class="main-header">
 									<span>Human side of design</span>
 								</h2>
-								<p>
-									<a data-artist-name="carlosarturotorres" style="color:#ff2100; font-size: 24px;">Carlos Arturo Torres</a> 
+								<p class="speaker">
+									<a data-artist-name="carlosarturotorres">Carlos Arturo Torres</a> 
 								</p>
 								<p class="excerpt">
 									Carlos shares his personal experiences and three of his recent design projects, which include a car (Peugeot RD), a respiratory assistant (PIRA) and a prosthetic (IKO), all accomplished through the lens of Human Centered Design. 
@@ -1132,7 +1132,7 @@
 						</div>
 
 						<!-- SECTION STARTS -->
-						<div class="album">
+						<div class="edition">
 							<div id="title" class="section_title">
 								<span class="year">2013</span>
 								<span class="theme">THEME: INNOVATION IN SCIENCE AND HUMANITIES</span>
@@ -1147,8 +1147,8 @@
 								<h2 class="main-header">
 									<span>Designing machines for experts</span>
 								</h2>
-								<p>
-									<a data-artist-name="amypritchett" style="color:#ff2100; font-size: 24px;">Amy Pritchett</a> 
+								<p class="speaker">
+									<a data-artist-name="amypritchett">Amy Pritchett</a> 
 								</p>
 								<p class="excerpt">
 									Amy explores the huge challenge of designing machines to work effectively with humans, and how they require humans to also change their conceptural model of work.
