Footer is responsive.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 					<!-- Footnote -->
 					<div class="footnote">
-						<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+						<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 					</div>
 				</div>					
             </nav>
@@ -481,7 +481,7 @@
 								</div>
 							</div>
 							<div class="copyright">
-								<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+								<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 							</div>
 						</div>
 						<!-- FOOTER -->
@@ -653,7 +653,7 @@
 								</div>
 							</div>
 							<div class="copyright">
-								<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+								<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 							</div>
 						</div>
 						<!-- FOOTER -->
@@ -873,7 +873,7 @@
 								</div>
 							</div>
 							<div class="copyright">
-								<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+								<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 							</div>
 						</div>
 						<!-- FOOTER -->
@@ -1069,7 +1069,7 @@
 								</div>
 							</div>
 							<div class="copyright">
-								<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+								<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 							</div>
 						</div>
 						<!-- FOOTER -->
@@ -1394,7 +1394,7 @@
 								</div>
 							</div>
 							<div class="copyright">
-								<span>© 2017 TEDxISTAlameda (x = independently organized TED event). All rights reserved.</span>
+								<span>© 2017 TEDxISTAlameda. All rights reserved.</span>
 							</div>
 						</div>
 						<!-- FOOTER -->
